components/layout/globalMessage/globalMessage.module.scss
@import "../../../styles/settings/_mixins.scss";
@import "../../../styles/settings/_colors.scss";

.message {
  color: white;
  padding: 0.5rem 0 0.5rem 0;
  background: $color-navy;
  position: relative;
  nav {
    position: relative;
    display: flex;
    flex-flow: column;
    align-items: center;
    padding-top: 0.5rem;
    @include desktop() {
      padding-top: 0;
      flex-flow: row;
      align-items: center;
    }
  }

  .contact {
    margin-top: 1rem;
    display: flex;
    justify-content: space-between;
    @include desktop() {
      margin-left: 2rem;
      margin-top: 0;
    }
  }

  .phone {
    margin-left: 2rem;
  }

  .close {
    position: absolute;
    right: 0;
    top: 0;
    @include desktop() {
      position: relative;
      margin-left: 1rem;
    }
    button {
      padding: 0.7rem 1.2rem;
      @include desktop() {
        padding: 0.3rem 1.2rem;
      }
      &:before {
        content: "\00d7";
        speak: none;
        font-style: normal;
        font-weight: 400;
        font-variant: normal;
        text-transform: none;
        font-size: 1.8rem;
        line-height: 1;
        opacity: 0.7;
      }
    }
  }
  a {
    white-space: nowrap;
  }
}

.messageContent {
  color: $color-white;
  width: 90%;
  text-align: left;
  p {
    font-size: toRem(16);
    text-align: center;
  }

  @include desktop() {
    text-align: center;
  }
  // Need important here to override some typography settings since this is a unique module
  * {
    padding-top: 0 !important;
    margin-top: 0 !important;
  }

  a {
    color: inherit;
  }
}

